<resources>
    <string name="app_name">CreBits</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="crebit_list_title">My Crebits</string>
    <string name="add_crebit">Add</string>
    <string name="edit_crebit">Edit</string>
    <string name="add_edit_crebit">{state} Crebit</string>
    <string name="reports">Reports</string>
    <string name="about">About Me</string>
    <string name="credit">Credit</string>
    <string name="debit">Debit</string>
    <string name="hint_enter_amount">Enter Amount</string>
    <string name="hint_select_date">Select Date</string>
    <string name="hinr_select_time">Select Time</string>
    <string name="hint_enter_description">Enter Description</string>
    <string name="btn_add_text">Save</string>
    <string name="saved_message">Saved</string>
    <string name="delete_message">Are you sure you want to delete this transaction?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="add_crebit_message">Saved Successfully</string>
    <string name="edit_crebit_message">Updated Successfully</string>
    <string name="delete_crebit_message">Deleted Successfully</string>
    <string name="error_message">Please Enter Any %s</string>
    <string name="lbl_personal">Personal</string>
    <string name="lbl_about">About</string>
    <string name="lbl_options">Options</string>
    <string name="lbl_reports">Reports</string>
    <string name="update_profile">Update</string>
    <string name="phone_no">03450000000</string>
    <string name="username">Name</string>
    <string name="useremail">Email</string>
    <string name="userphone">Phone</string>
    <string name="email">Wiliam@gmail.com</string>

</resources>