<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/crebitList">

    <fragment
        android:id="@+id/crebitList"
        android:name="com.shobu95.crebits.features.crebit_list.CrebitList"
        android:label="@string/crebit_list_title"
        tools:layout="@layout/fragment_crebit_list">
        <action
            android:id="@+id/action_crebitList_to_addEditCrebit"
            app:destination="@id/addEditCrebit" />
    </fragment>
    <fragment
        android:id="@+id/addEditCrebit"
        android:name="com.shobu95.crebits.features.add_edit_crebit.AddEditCrebit"
        android:label="@string/add_crebit"
        tools:layout="@layout/fragment_add_edit_crebit" />
    <fragment
        android:id="@+id/reports"
        android:name="com.shobu95.crebits.features.reports.Reports"
        android:label="@string/reports"
        tools:layout="@layout/fragment_reports" />
    <fragment
        android:id="@+id/about"
        android:name="com.shobu95.crebits.features.about.About"
        android:label="@string/about"
        tools:layout="@layout/fragment_about" />
</navigation>