<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>


    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/silver"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/relativeLayout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_320sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_260sdp"
                    android:background="@drawable/gradientbackground"
                    android:orientation="vertical">

                    <androidx.constraintlayout.utils.widget.ImageFilterView
                        android:id="@+id/ivProfilePhoto"
                        android:layout_width="@dimen/_100sdp"
                        android:layout_height="@dimen/_100sdp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/_30sdp"
                        android:background="@android:color/black"
                        android:src="@drawable/android_icon"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:roundPercent="1" />

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:hint="@string/username"
                        android:importantForAutofill="no"
                        android:inputType="textPersonName"
                        android:text="@string/app_name"
                        android:textColor="#fff"
                        android:textSize="@dimen/_18sdp"
                        android:textStyle="bold" />
                </LinearLayout>

                <androidx.cardview.widget.CardView
                    android:layout_width="@dimen/_250sdp"
                    android:layout_height="@dimen/_100sdp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="275dp">


                </androidx.cardview.widget.CardView>

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/llInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:paddingStart="@dimen/_30sdp"
                android:paddingTop="@dimen/_20sdp"
                android:paddingEnd="@dimen/_30sdp"
                android:paddingBottom="@dimen/_20sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/relativeLayout">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingStart="@dimen/_20sdp"
                    android:paddingEnd="@dimen/_20sdp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:padding="@dimen/_2sdp"
                        android:src="@drawable/ic_email" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:gravity="start|center"
                        android:hint="@string/useremail"
                        android:importantForAutofill="no"
                        android:inputType="textEmailAddress"
                        android:paddingStart="@dimen/_10sdp"
                        android:paddingEnd="@dimen/_10sdp"
                        android:text="@string/email" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:orientation="horizontal"
                    android:paddingStart="@dimen/_20sdp"
                    android:paddingEnd="@dimen/_20sdp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:padding="@dimen/_2sdp"
                        android:src="@drawable/ic_phone" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:gravity="start|center"
                        android:hint="@string/userphone"
                        android:importantForAutofill="no"
                        android:inputType="number"
                        android:paddingStart="@dimen/_10sdp"
                        android:paddingEnd="@dimen/_10sdp"
                        android:text="@string/phone_no" />
                </LinearLayout>

            </LinearLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/update_profile"
                android:textColor="#fff"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/llInfo" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>