<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.shobu95.crebits.utils.Constants.TransactionType" />

        <variable
            name="viewModel"
            type="com.shobu95.crebits.screens.add_edit_crebit.AddEditCrebitViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_15sdp">

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <RadioButton
                    android:id="@+id/rb_credit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:background="@drawable/rb_white_selector"
                    android:button="@null"
                    android:checked="@{viewModel.transactionType.equals(TransactionType.CREDIT.name())}"
                    android:gravity="center"
                    android:onClick="@{() -> viewModel.setTransactionType(TransactionType.CREDIT)}"
                    android:text="@string/credit" />

                <RadioButton
                    android:id="@+id/rb_debit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/rb_white_selector"
                    android:button="@null"
                    android:checked="@{viewModel.transactionType.equals(TransactionType.DEBIT.name())}"
                    android:gravity="center"
                    android:onClick="@{() -> viewModel.setTransactionType(TransactionType.DEBIT)}"
                    android:text="@string/debit" />

            </RadioGroup>

            <TextView
                android:id="@+id/error_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:textColor="@color/design_default_color_error"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/background_white"
                android:ems="10"
                android:hint="@string/hint_enter_amount"
                android:inputType="number"
                android:padding="@dimen/_10sdp"
                android:text="@={viewModel.amount}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_date"
                android:layout_width="@dimen/_125sdp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_weight="1"
                android:background="@drawable/background_white"
                android:ems="10"
                android:focusable="false"
                android:hint="@string/hint_select_date"
                android:onClick="@{() -> viewModel.openDatePicker()}"
                android:padding="@dimen/_10sdp"
                android:text="@={viewModel.date}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_amount" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_time"
                android:layout_width="@dimen/_125sdp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:layout_weight="1"
                android:background="@drawable/background_white"
                android:ems="10"
                android:focusable="false"
                android:hint="@string/hinr_select_time"
                android:onClick="@{() -> viewModel.openTimePicker()}"
                android:padding="@dimen/_10sdp"
                android:text="@={viewModel.time}"
                app:layout_constraintBottom_toBottomOf="@+id/et_date"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_amount" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/background_white"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/hint_enter_description"
                android:inputType="textMultiLine"
                android:lines="5"
                android:maxLines="5"
                android:padding="@dimen/_10sdp"
                android:text="@={viewModel.description}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_date" />

            <Button
                android:id="@+id/btn_execute"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:text="@string/btn_add_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</layout>